Pagina inicial com configuração basica e remoção do menu superior.

--- a/www/home.html
+++ b/www/home.html
@@ -1,12 +1,15 @@
 <!-- Wappler include head-page="index.html" is="dmx-app" id="home" appConnect="local" bootstrap5="local" capacitor="local" -->
-<main>
-    <div class="jumbotron">
-        <h1 class="display-3">Hello, world!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <p class="lead">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-        </p>
+<div class="container-fluid vh-100">
+    <div class="row h-100">
+        <div class="col-8">
+            <div class="row h-100 align-items-center justify-content-center">
+                <div class="col-5 align-self-center text-center">
+                    <img src="assets/images/front.png" class="img-fluid mb-5" width="300">
+                    <h3 class="mb-3">Organize leads. Simplifique processos. Converta mais.</h3>
+                    <p>Nosso CRM foi criado especialmente para os polos da Cruzeiro do Sul Virtual que precisam acompanhar cada oportunidade com agilidade e clareza. Com ele, você gerencia leads, agenda contatos e acompanha suas conversões — tudo em um só lugar, de forma simples e eficiente.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col"></div>
     </div>
-</main>
+</div>
