Configuração inicial da pagina de login e adição do arquivo css na pagina principal.

--- a/www/home.html
+++ b/www/home.html
@@ -1,11 +1,11 @@
 <!-- Wappler include head-page="index.html" is="dmx-app" id="home" appConnect="local" bootstrap5="local" capacitor="local" -->
-<div class="container-fluid vh-100">
+<div class="container-fluid vh-100 bg-login">
     <div class="row h-100">
         <div class="col-8">
             <div class="row h-100 align-items-center justify-content-center">
                 <div class="col-5 align-self-center text-center">
                     <img src="assets/images/front.png" class="img-fluid mb-5" width="300">
-                    <h3 class="mb-3">Organize leads. Simplifique processos. Converta mais.</h3>
+                    <h3 class="mb-3 titulo">Organize leads. Simplifique processos. Converta mais.</h3>
                     <p>Nosso CRM foi criado especialmente para os polos da Cruzeiro do Sul Virtual que precisam acompanhar cada oportunidade com agilidade e clareza. Com ele, você gerencia leads, agenda contatos e acompanha suas conversões — tudo em um só lugar, de forma simples e eficiente.</p>
                 </div>
             </div>
