--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
 	<script src="dmxAppConnect/dmxRouting/dmxRouting.js" defer></script>
 	<script src="js/routes.js" defer></script>
 	<link rel="stylesheet" href="bootstrap/5/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body is="dmx-app" id="index">
