Novo layout e organizacao do layout da pagina de entrada.

--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,8 @@
 	<script src="js/routes.js" defer></script>
 	<link rel="stylesheet" href="bootstrap/5/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="dmxAppConnect/dmxAnimateCSS/animate.min.css" />
+	<script src="dmxAppConnect/dmxAnimateCSS/dmxAnimateCSS.js" defer></script>
 </head>
 
 <body is="dmx-app" id="index">
