--- a/www/home.html
+++ b/www/home.html
@@ -1,34 +1,37 @@
-<!-- Wappler include head-page="index.html" is="dmx-app" id="home" appConnect="local" bootstrap5="local" capacitor="local" -->
-<div class="container-fluid vh-100 bg-login px-5">
+<!-- Wappler include head-page="index.html" is="dmx-app" id="home" appConnect="local" bootstrap5="local" capacitor="local" components="{dmxAnimateCSS:{}}" -->
+<div class="container-fluid vh-100">
     <div class="row h-100">
-        <div class="col-7">
-            <div class="row h-100 align-items-center justify-content-center">
-                <div class="col-6 align-self-center text-center">
-                    <img src="assets/images/front.png" class="img-fluid mb-5">
-                    <h3 class="mb-3 titulo">Organize leads. Simplifique processos. Converta mais.</h3>
-                    <p>Nosso CRM foi criado especialmente para os polos da Cruzeiro do Sul Virtual que precisam acompanhar cada oportunidade com agilidade e clareza. Com ele, você gerencia leads, agenda contatos e acompanha suas conversões — tudo em um só lugar, de forma simples e eficiente.</p>
+        <div class="col-7 bg-login">
+            <div class="row h-100 justify-content-center align-items-center">
+                <div class="col-8 text-center">
+                    <h2 class="mb-3 text-white">Organize leads. Simplifique processos. Converta mais.</h2>
+                    <p class="text-secondary fs-5 text-white-50">Nosso CRM foi criado especialmente para os polos da Cruzeiro do Sul Virtual que precisam acompanhar cada oportunidade com agilidade e clareza. Com ele, você gerencia leads, agenda contatos e acompanha suas conversões — tudo em um só lugar, de forma simples e eficiente.</p>
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="row h-100 align-items-center justify-content-center">
-                <div class="col p-5 bg-white rounded-4">
-                    <h4 class="text-center">Bem-vindo(a)</h4>
-                    <h5 class="text-center mb-4">Acesse o seu CRM de atendimento e prospecção de alunos</h5>
-                    <form id="form1">
-                        <div class="form-group mb-3">
-                            <input type="text" class="form-control" id="input1" name="input1" aria-describedby="input1_help" placeholder="Enter some text">
-                        </div>
-                        <div class="form-group mb-3">
-                            <input type="text" class="form-control" id="input2" name="input1" aria-describedby="input1_help1" placeholder="Enter some text">
-                        </div>
-                        <div class="form-group mb-3 text-end">
-                            <small id="input1_help2" class="form-text text-muted">Recuperar senha.</small>
-                        </div>
-                        <div class="form-group mb-3"> <button id="btn1" class="btn btn-dark w-100">Fazer login</button>
-                        </div>
-                    </form>
+                <div class="col-10">
+                    <div class="d-flex flex-column p-3">
+                        <h2 class="text-center">Bem-vindo(a)</h2>
+                        <h6 class="text-center mb-5 text-secondary">Acesse o seu CRM de atendimento e prospecção de alunos</h6>
+                        <form id="form1" class="mb-3">
+                            <div class="form-group mb-3">
+                                <input type="text" class="form-control" id="input1" name="input1" aria-describedby="input1_help" placeholder="Seu e-mail cadastrado">
+                            </div>
+                            <div class="form-group mb-3">
+                                <input type="password" class="form-control" id="input2" name="input1" aria-describedby="input1_help1" placeholder="Senha">
+                            </div>
+                            <div class="form-group mb-3 text-end">
+                                <small id="input1_help2" class="form-text text-danger">Recuperar senha.</small>
+                            </div>
+                            <div class="form-group"> <button id="btn1" class="btn w-100 py-2 btn-primary">Fazer login</button>
+                            </div>
+                        </form>
+                        <p class="text-center m-0 mini-titulo">© Spacefeed. Todos os direitos reservados.</p>
+                    </div>
                 </div>
+
             </div>
         </div>
     </div>
