--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,8 @@
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="dmxAppConnect/dmxAnimateCSS/animate.min.css" />
 	<script src="dmxAppConnect/dmxAnimateCSS/dmxAnimateCSS.js" defer></script>
+	<link rel="stylesheet" href="dmxAppConnect/dmxValidator/dmxValidator.css" />
+	<script src="dmxAppConnect/dmxValidator/dmxValidator.js" defer></script>
 </head>
 
 <body is="dmx-app" id="index">
