Ajuste na tela inicial e responsividade.

--- a/www/home.html
+++ b/www/home.html
@@ -2,7 +2,7 @@
 <div class="container-fluid vh-100 p-5 bg-login">
     <div class="row h-100">
         <!-- Coluna Esquerda (oculta em tablets e móveis) -->
-        <div class="col-lg-7 d-none d-lg-block">
+        <div class="col-lg-6 d-none d-lg-block">
             <div class="d-flex h-100 justify-content-center align-items-center">
                 <div class="col-8">
                     <!-- Conteúdo da coluna esquerda (vazio por enquanto) -->
@@ -10,8 +10,8 @@
             </div>
         </div>
 
-        <!-- Coluna Direita (formulário) -->
-        <div class="col-12 col-lg-5">
+        <!-- Coluna Direita (formulário) - mais larga em desktop -->
+        <div class="col-12 col-lg-6">
             <div class="d-flex flex-column h-100 justify-content-center align-items-center">
                 <!-- Logo -->
                 <header class="mb-4">
@@ -20,7 +20,7 @@
 
                 <!-- Container do Formulário -->
                 <main class="w-100 d-flex justify-content-center mb-4">
-                    <div class="col-12 col-sm-10 col-md-8 col-lg-9 col-xl-8 p-4 p-md-5 glass-background-solid">
+                    <div class="col-12 col-sm-10 col-md-8 col-lg-10 col-xl-9 col-xxl-8 p-4 p-md-5 p-lg-6 glass-background-solid">
                         <div class="text-center mb-4">
                             <h1 class="h3 mb-2">Bem-vindo(a)</h1>
                             <p class="h6 text-muted mb-0">Acesse o seu CRM de atendimento e prospecção de alunos</p>
@@ -52,7 +52,7 @@
 
                 <!-- Copyright -->
                 <footer class="text-center px-3">
-                    <p class="mini-titulo mb-0">© Spacefeed. Todos os direitos reservados.</p>
+                    <p class="mini-titulo mb-0">© Spacefeed é uma marca registrada de RKS Tech Solution. Todos os direitos reservados.</p>
                 </footer>
             </div>
         </div>
