--- a/www/home.html
+++ b/www/home.html
@@ -1,5 +1,5 @@
 <!-- Wappler include head-page="index.html" is="dmx-app" id="home" appConnect="local" bootstrap5="local" capacitor="local" components="{dmxAnimateCSS:{},dmxValidator:{}}" -->
-<div class="container-fluid vh-100 p-5 bg-login">
+<div class="container-fluid vh-100 p-5">
     <div class="row h-100">
         <!-- Coluna Esquerda (oculta em tablets e móveis) -->
         <div class="col-lg-6 d-none d-lg-block">
@@ -27,6 +27,7 @@
                         </div>
 
                         <form is="dmx-serverconnect-form" id="login_form" method="post" action="/api/auth/login">
+
                             <div class="form-group mb-3">
                                 <label for="email" class="visually-hidden">E-mail</label>
                                 <input type="email" class="form-control" id="email" name="email" placeholder="Seu e-mail cadastrado" required data-msg-required="Por favor, digite seu e-mail">
@@ -38,13 +39,14 @@
                             </div>
 
                             <div class="form-group mb-3 text-end">
-                                <small class="form-text text-muted">
-                                    <a href="#" class="text-decoration-none">Esqueceu sua senha? Clique aqui!</a>
-                                </small>
+                                <small class="form-text text-muted">Esqueci minha senha</small>
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group mb-3">
                                 <button type="submit" class="btn btn-warning w-100">Fazer login</button>
+                            </div>
+                            <div class="form-group text-center">
+                                <h6 class="m-0">Crie sua conta agora. <a href="front/f/criar-conta" class="text-decoration-none text-primary" internal="true">Clique aqui!</a></h6>
                             </div>
                         </form>
                     </div>
@@ -52,7 +54,7 @@
 
                 <!-- Copyright -->
                 <footer class="text-center px-3">
-                    <p class="mini-titulo mb-0">© Spacefeed é uma marca registrada de RKS Tech Solution. Todos os direitos reservados.</p>
+                    <p class="mini-titulo mb-0 p-1 rounded-2">© Spacefeed é uma marca registrada de RKS Tech Solution. Todos os direitos reservados.</p>
                 </footer>
             </div>
         </div>
