--- a/www/index.html
+++ b/www/index.html
@@ -10,14 +10,14 @@
 	<script src="dmxAppConnect/dmxRouting/dmxRouting.js" defer></script>
 	<script src="js/routes.js" defer></script>
 	<link rel="stylesheet" href="bootstrap/5/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="dmxAppConnect/dmxAnimateCSS/animate.min.css" />
 	<script src="dmxAppConnect/dmxAnimateCSS/dmxAnimateCSS.js" defer></script>
 	<link rel="stylesheet" href="dmxAppConnect/dmxValidator/dmxValidator.css" />
 	<script src="dmxAppConnect/dmxValidator/dmxValidator.js" defer></script>
 </head>
 
-<body is="dmx-app" id="index">
+<body is="dmx-app" id="index" class="bg-login">
 	<main is="dmx-view" id="view1"></main>
 	<script src="bootstrap/5/js/bootstrap.bundle.min.js"></script>
 </body>
