Atualizado para a pagina de criação de senha com as validações de mascara e preenchimento.

--- a/www/home.html
+++ b/www/home.html
@@ -46,7 +46,7 @@
                                 <button type="submit" class="btn btn-warning w-100">Fazer login</button>
                             </div>
                             <div class="form-group text-center">
-                                <h6 class="m-0">Crie sua conta agora. <a href="front/f/criar-conta" class="text-decoration-none text-primary" internal="true">Clique aqui!</a></h6>
+                                <h6 class="m-0">Crie sua conta agora. <a href="front/f/criar-conta" class="text-decoration-none" internal="true">Clique aqui!</a></h6>
                             </div>
                         </form>
                     </div>
