--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
 	<script src="dmxAppConnect/dmxAnimateCSS/dmxAnimateCSS.js" defer></script>
 	<link rel="stylesheet" href="dmxAppConnect/dmxValidator/dmxValidator.css" />
 	<script src="dmxAppConnect/dmxValidator/dmxValidator.js" defer></script>
+	<script src="dmxAppConnect/dmxBootstrap5Alert/dmxBootstrap5Alert.js" defer></script>
 </head>
 
 <body is="dmx-app" id="index" class="bg-login">
