--- a/www/index.html
+++ b/www/index.html
@@ -16,9 +16,14 @@
 	<link rel="stylesheet" href="dmxAppConnect/dmxValidator/dmxValidator.css" />
 	<script src="dmxAppConnect/dmxValidator/dmxValidator.js" defer></script>
 	<script src="dmxAppConnect/dmxBootstrap5Alert/dmxBootstrap5Alert.js" defer></script>
+	<link rel="stylesheet" href="dmxAppConnect/dmxNotifications/dmxNotifications.css" />
+	<script src="dmxAppConnect/dmxNotifications/dmxNotifications.js" defer></script>
+	<script src="dmxAppConnect/dmxBrowser/dmxBrowser.js" defer></script>
 </head>
 
 <body is="dmx-app" id="index" class="bg-login">
+	<div is="dmx-browser" id="navegacao"></div>
+	<dmx-notifications id="notificacoes"></dmx-notifications>
 	<main is="dmx-view" id="view1"></main>
 	<script src="bootstrap/5/js/bootstrap.bundle.min.js"></script>
 </body>
