--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
 
 <body is="dmx-app" id="index" class="bg-login">
 	<div is="dmx-browser" id="navegacao"></div>
-	<dmx-notifications id="notificacoes"></dmx-notifications>
+	<dmx-notifications id="notificacoes" timeout="3000"></dmx-notifications>
 	<main is="dmx-view" id="view1"></main>
 	<script src="bootstrap/5/js/bootstrap.bundle.min.js"></script>
 </body>
