--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" href="dmxAppConnect/dmxNotifications/dmxNotifications.css" />
 	<script src="dmxAppConnect/dmxNotifications/dmxNotifications.js" defer></script>
 	<script src="dmxAppConnect/dmxBrowser/dmxBrowser.js" defer></script>
+	<script src="dmxAppConnect/dmxFormatter/dmxFormatter.js" defer></script>
 </head>
 
 <body is="dmx-app" id="index" class="bg-login">
