--- a/www/home.html
+++ b/www/home.html
@@ -1,10 +1,26 @@
-<!-- Wappler include head-page="index.html" is="dmx-app" id="home" appConnect="local" bootstrap5="local" capacitor="local" components="{dmxAnimateCSS:{},dmxValidator:{}}" -->
+<!-- Wappler include head-page="index.html" is="dmx-app" id="home" appConnect="local" bootstrap5="local" capacitor="local" components="{dmxAnimateCSS:{},dmxValidator:{},dmxStateManagement:{},dmxFormatter:{}}" -->
+<script is="dmx-flow" id="usuario_logado" type="text/dmx-flow" autorun="true">{
+  condition: {
+    outputType: "boolean",
+    if: "{{id_usuario.data.id.isDefined()}}",
+    then: {
+      steps: {
+        run: {
+          outputType: "text",
+          action: "{{navegacao.goto('../interno/backoffice.html')}}"
+        }
+      }
+    }
+  }
+}</script>
+<dmx-local-manager id="id_usuario"></dmx-local-manager>
 <div class="container-fluid vh-100 p-5">
     <div class="row h-100">
         <!-- Coluna Esquerda (oculta em tablets e móveis) -->
         <div class="col-lg-6 d-none d-lg-block">
             <div class="d-flex h-100 justify-content-center align-items-center">
                 <div class="col-8">
+                    <a href="../interno/backoffice.html" class="btn">Anchor Button</a>
                     <!-- Conteúdo da coluna esquerda (vazio por enquanto) -->
                 </div>
             </div>
@@ -26,7 +42,7 @@
                             <p class="h6 text-muted mb-0">Acesse o seu CRM de atendimento e prospecção de alunos</p>
                         </div>
 
-                        <form is="dmx-serverconnect-form" id="login_form" method="post" action="/api/auth/login">
+                        <form is="dmx-serverconnect-form" id="login_form" method="post" action="http://localhost:3000/api/login" site="backendMarte">
 
                             <div class="form-group mb-3">
                                 <label for="email" class="visually-hidden">E-mail</label>
