--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,7 @@
 	<script src="dmxAppConnect/dmxNotifications/dmxNotifications.js" defer></script>
 	<script src="dmxAppConnect/dmxBrowser/dmxBrowser.js" defer></script>
 	<script src="dmxAppConnect/dmxFormatter/dmxFormatter.js" defer></script>
+<script src="dmxAppConnect/dmxStateManagement/dmxStateManagement.js" defer></script>
 </head>
 
 <body is="dmx-app" id="index" class="bg-login">
