--- a/www/interno/backoffice.html
+++ b/www/interno/backoffice.html
@@ -1,19 +1,57 @@
 <!doctype html>
-<html>
+<html lang="pt-br">
 
 <head>
     <script src="../dmxAppConnect/dmxAppConnect.js"></script>
     <meta charset="UTF-8">
-    <title>Untitled Document</title>
+    <title>Spacefeed Marte</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../bootstrap/5/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../dmxAppConnect/dmxRouting/dmxRouting.js" defer></script>
     <script src="../js/routes.js" defer></script>
+    <script src="../dmxAppConnect/dmxStateManagement/dmxStateManagement.js" defer></script>
+    <script src="../dmxAppConnect/dmxFormatter/dmxFormatter.js" defer></script>
+    <link rel="stylesheet" href="../dmxAppConnect/dmxNotifications/dmxNotifications.css" />
+    <script src="../dmxAppConnect/dmxNotifications/dmxNotifications.js" defer></script>
+    <script src="../dmxAppConnect/dmxBrowser/dmxBrowser.js" defer></script>
 </head>
 
 <body is="dmx-app" id="backoffice">
+    <div is="dmx-browser" id="navegacao"></div>
+    <dmx-notifications id="notificacoes"></dmx-notifications>
+    <script is="dmx-flow" id="redirect_deslogado" type="text/dmx-flow" autorun="true">{
+  condition: {
+    outputType: "boolean",
+    if: "{{idUsuario.data.id.isEmpty()}}",
+    then: {
+      steps: {
+        run: {outputType: "text", action: "{{navegacao.goto('../index.html')}}"}
+      }
+    }
+  }
+}</script>
+    <dmx-local-manager id="idUsuario"></dmx-local-manager>
+    <header class="mb-3 py-4 bg-black">
+        <div class="container-xxl">
+            <div class="row align-items-center">
+                <div class="col align-self-center">
+                    <div class="d-flex flex-row align-items-center">
+                        <a href="/interno/home"><img src="../assets/images/appIcon.ico" class="img-fluid" width="56"></a>
+                        <h5 class="text-white">{{idUsuario.data.id}}</h5>
+
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="d-flex justify-content-end">
+                        <button id="btn1" class="btn text-white" dmx-on:click="idUsuario.removeAll();redirect_deslogado.run()">Sair</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
     <main is="dmx-view" id="view1"></main>
     <script src="../bootstrap/5/js/bootstrap.bundle.min.js"></script>
 </body>
