--- a/www/interno/backoffice.html
+++ b/www/interno/backoffice.html
@@ -38,7 +38,7 @@
             <div class="row align-items-center">
                 <div class="col align-self-center">
                     <div class="d-flex flex-row align-items-center">
-                        <a href="/interno/home"><img src="../assets/images/appIcon.ico" class="img-fluid" width="56"></a>
+                        <a href="/" internal="true"><img src="../assets/images/appIcon.ico" class="img-fluid" width="56"></a>
                         <h5 class="text-white">{{idUsuario.data.id}}</h5>
 
                     </div>
