Adicionado fonte, deixado a barra de navegavao preta.

--- a/www/interno/backoffice.html
+++ b/www/interno/backoffice.html
@@ -60,9 +60,9 @@
             <div class="row">
                 <div class="col px-0">
                     <div class="nav w-100">
-                        <a class="nav-item nav-link" href="/in/security/empresa" internal="true">Empresa</a>
-                        <a class="nav-item nav-link" href="/in/security/colaborador" internal="true">Colaborador</a>
-                        <a class="nav-item nav-link" href="/in/security/funil-de-vendas" internal="true">Funil de venda</a>
+                        <a class="nav-item nav-link menu-nav" href="/in/security/empresa" internal="true">Empresa</a>
+                        <a class="nav-item nav-link menu-nav" href="/in/security/colaborador" internal="true">Colaborador</a>
+                        <a class="nav-item nav-link menu-nav" href="/in/security/funil-de-vendas" internal="true">Funil de venda</a>
                     </div>
                 </div>
             </div>
