--- a/www/interno/home.html
+++ b/www/interno/home.html
@@ -1,7 +1,7 @@
 <!-- Wappler include head-page="backoffice.html" is="dmx-app" id="home" appConnect="local" bootstrap5="local" -->
 <div class="container-xxl">
     <div class="row">
-        <div class="col">
+        <div class="col-12 p-4 rounded-4 bg-white">
             <div class="jumbotron">
                 <h1 class="display-3">Hello, world!</h1>
                 <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
