--- a/www/interno/funil-de-vendas.html
+++ b/www/interno/funil-de-vendas.html
@@ -1,7 +1,7 @@
 <!-- Wappler include head-page="backoffice.html" is="dmx-app" id="funildevendas" appConnect="local" bootstrap5="local" capacitor="local" -->
 <div class="container-xxl">
     <div class="row">
-        <div class="col">
+        <div class="col-12 p-4 rounded-4 bg-white">
             <h1>Funil de vendas</h1>
         </div>
     </div>
