--- a/www/index.html
+++ b/www/index.html
@@ -20,10 +20,13 @@
 	<script src="dmxAppConnect/dmxNotifications/dmxNotifications.js" defer></script>
 	<script src="dmxAppConnect/dmxBrowser/dmxBrowser.js" defer></script>
 	<script src="dmxAppConnect/dmxFormatter/dmxFormatter.js" defer></script>
-<script src="dmxAppConnect/dmxStateManagement/dmxStateManagement.js" defer></script>
+	<script src="dmxAppConnect/dmxStateManagement/dmxStateManagement.js" defer></script>
+	<link rel="stylesheet" href="dmxAppConnect/dmxPreloader/dmxPreloader.css" />
+	<script src="dmxAppConnect/dmxPreloader/dmxPreloader.js" defer></script>
 </head>
 
 <body is="dmx-app" id="index" class="bg-login">
+	<dmx-preloader id="preloader1" color="#ffc107" spinner="wave"></dmx-preloader>
 	<div is="dmx-browser" id="navegacao"></div>
 	<dmx-notifications id="notificacoes" timeout="3000"></dmx-notifications>
 	<main is="dmx-view" id="view1"></main>
