--- a/www/interno/funil-de-vendas.html
+++ b/www/interno/funil-de-vendas.html
@@ -1,5 +1,5 @@
 <!-- Wappler include head-page="backoffice.html" is="dmx-app" id="funildevendas" appConnect="local" bootstrap5="local" capacitor="local" -->
-<div class="container-xxl">
+<div class="container-fluid">
     <div class="row">
         <div class="col-12 p-4 rounded-4 bg-white">
             <h1>Funil de vendas</h1>
