--- a/www/interno/home.html
+++ b/www/interno/home.html
@@ -1,5 +1,5 @@
 <!-- Wappler include head-page="backoffice.html" is="dmx-app" id="home" appConnect="local" bootstrap5="local" -->
-<div class="container-xxl">
+<div class="container-fluid">
     <div class="row">
         <div class="col-12 p-4 rounded-4 bg-white">
             <div class="jumbotron">
